--- a/NetCoreAngular-BackEnd/NetCore5-WebApi.csproj
+++ b/NetCoreAngular-BackEnd/NetCore5-WebApi.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>NetCoreAngular_BackEnd</RootNamespace>
+    <RootNamespace>NetCore5-WebApi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
